--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    text-align: center;
     margin: 0;
 }
 
@@ -8,6 +9,8 @@ h1{
 
 .top-container{
     background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
 }
 
 .middle-container{
@@ -20,4 +23,16 @@ h1{
     height: 200px;
     width: 200px;
     background-color: blue;
+}
+
+.bottom-cloud{
+    position: absolute;
+    bottom:300px;
+    left:300px;
+}
+
+.top-cloud{
+    position: absolute;
+    top:50px;
+    right:300px;
 }
