--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,66 @@
-body{
-    text-align: center;
-    margin: 0;
+body {
+  text-align: center;
+  margin: 0;
+  font-family: "Merriweather", serif;
 }
 
-h1{
-    margin-top: 0;
+h1 {
+  font-size: 5.625rem;
+  margin-top: 50px auto 0 auto;
+  color: #66bfbf;
+  font-family: "Neucha", cursive;
 }
 
-.top-container{
-    background-color: #E4F9F5;
-    position: relative;
-    padding-top: 100px;
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  color: #66bfbf;
+  font-weight: normal;
 }
 
-.middle-container{
-    height: 200px;
-    width: 200px;
-    background-color: red;
+
+h3 {
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
+}
+a {
+  color: #11999e;
 }
 
-.bottom-container{
-    height: 200px;
-    width: 200px;
-    background-color: blue;
+span {
+  text-decoration: underline;
 }
 
-.bottom-cloud{
-    position: absolute;
-    bottom:300px;
-    left:300px;
+.top-container {
+  background-color: #e4f9f5;
+  position: relative;
+  padding-top: 100px;
 }
 
-.top-cloud{
-    position: absolute;
-    top:50px;
-    right:300px;
+.middle-container {
+}
+
+.bottom-container {
+}
+
+.java {
+  width: 200px;
+}
+.pc {
+  width: 200px;
+}
+.profile img {
+  width: 200px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  bottom: 300px;
+  left: 300px;
+}
+
+.top-cloud {
+  position: absolute;
+  top: 50px;
+  right: 300px;
 }
