--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ span {
   background-color: #66bfbf;
   padding: 50px 0px 20px;
 }
-a{
+.bottom-container a{
   color: rgba(20, 86, 88, 0.795);
   font-family: "Montserrat", sans-serif;
   margin:10px 20px;
