--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   text-align: center;
   margin: 0;
   font-family: "Merriweather", serif;
-  color: #40514E;
+  color: #40514e;
 }
 
 h1 {
@@ -18,7 +18,6 @@ h2 {
   color: #66bfbf;
   font-weight: normal;
 }
-
 
 h3 {
   font-family: "Montserrat", sans-serif;
@@ -38,11 +37,10 @@ span {
   padding-top: 100px;
 }
 
-.intro{
+.intro {
   width: 50%;
-  margin:auto;
+  margin: auto;
 }
-
 
 .middle-container {
   margin: 100px 0;
@@ -52,33 +50,31 @@ span {
   background-color: #66bfbf;
   padding: 50px 0px 20px;
 }
- a{
+a {
   color: rgba(20, 86, 88, 0.795);
   font-family: "Montserrat", sans-serif;
-  margin:10px 20px;
+  margin: 10px 20px;
   text-decoration: none;
 }
-.bottom-container a:hover{
+.bottom-container a:hover {
   text-decoration: underline;
 }
-p{
+p {
   line-height: 2;
 }
 
-.cpyr{
-  color: #EAF6F6;
+.cpyr {
+  color: #eaf6f6;
 }
-hr{
+hr {
   border-style: dotted none none none;
   width: 4%;
   border-width: 6px;
-  border-color: #EAF6F6;
+  border-color: #eaf6f6;
   margin: 100px auto;
 }
 
-
-
-.skill-row{
+.skill-row {
   width: 50%;
   margin: 100px auto;
   text-align: left;
@@ -88,7 +84,7 @@ hr{
   float: right;
   margin-left: 30px;
 }
-.contact-msg{
+.contact-msg {
   width: 40%;
   margin: 40px auto 60px;
 }
@@ -96,7 +92,7 @@ hr{
   width: 25%;
 }
 
-.java{
+.java {
   width: 25%;
   float: left;
   margin-right: 30px;
@@ -116,49 +112,63 @@ hr{
 
 .btn {
   font-family: "Montserrat", sans-serif;
-  color: #FFFFFF !important;
+  color: #ffffff !important;
   font-size: 20px;
-  box-shadow: 1px 1px 1px #BEE2F9;
+  box-shadow: 1px 1px 1px #bee2f9;
   padding: 10px 25px;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   border-radius: 8px;
-  background: #63B8EE;
-  background: linear-gradient(top,  #11CDD4,  #11999E);
-  background: -ms-linear-gradient(top,  #11CDD4,  #11999E);
-  background: -webkit-gradient(linear, left top, left bottom, from(#11CDD4), to(#11999E));
-  background: -moz-linear-gradient(top,  #11CDD4,  #11999E);
+  background: #63b8ee;
+  background: linear-gradient(top, #11cdd4, #11999e);
+  background: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#11cdd4),
+    to(#11999e)
+  );
+  background: -moz-linear-gradient(top, #11cdd4, #11999e);
   text-decoration: none;
 }
 .btn:hover {
   font-family: "Montserrat", sans-serif;
-  background: #468CCF;
-  background: linear-gradient(top,  #30E3CB,  #2BC4AD);
-  background: -ms-linear-gradient(top,  #30E3CB,  #2BC4AD);
-  background: -webkit-gradient(linear, left top, left bottom, from(#30E3CB), to(#2BC4AD));
-  background: -moz-linear-gradient(top,  #30E3CB,  #2BC4AD);
+  background: #468ccf;
+  background: linear-gradient(top, #30e3cb, #2bc4ad);
+  background: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#30e3cb),
+    to(#2bc4ad)
+  );
+  background: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
   text-decoration: none;
 }
-@media (max-width:800px){
-  .desc1,.desc2{
+@media (max-width: 800px) {
+  .desc1,
+  .desc2 {
     clear: both;
   }
-  .java,.pc{
+  .java,
+  .pc {
     width: 50%;
     float: none;
     margin: 0;
   }
-  .skill-row{
+  .skill-row {
     width: 50%;
     margin: 100px auto;
     text-align: center;
   }
 
-  .top-cloud{
+  .top-cloud {
     right: 50px;
   }
 
-  .bottom-cloud{
+  .bottom-cloud {
     left: 50px;
   }
 }
